--- a/pages/bids/bids.html
+++ b/pages/bids/bids.html
@@ -39,7 +39,7 @@
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="/index.html">
               <img
-                src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+                src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
                 alt="Logo"
                 height="65"
               />
@@ -108,35 +108,14 @@
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                   <a
-                    class="nav-link dropdown-toggle"
-                    href="/pages/bids/bids.html"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
+                    class="nav-link"
+                    aria-current="page"
+                    href="./pages/bids/bids.html"
                   >
                     Bids
                   </a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="/pages/bids/bidding.html"
-                        >Bidding</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href=/pages/bids/bidding-process.html"
-                        >Bidding Process</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="/pages/bids/help.html"
-                        >Help</a
-                      >
-                    </li>
-                  </ul>
                 </li>
                 <li class="nav-item">
                   <a
