--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
               <img
-                src="./img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
-                alt="Logo"
+                src="./img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
                 height="65"
               />
             </a>
@@ -79,16 +78,9 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Carrers & Subs
+                    Subscontractors
                   </a>
                   <ul class="dropdown-menu">
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="./pages/carrers/carrers.html"
-                        >Carrers</a
-                      >
-                    </li>
                     <li>
                       <a
                         class="dropdown-item"
@@ -119,35 +111,14 @@
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                   <a
-                    class="nav-link dropdown-toggle"
+                    class="nav-link"
+                    aria-current="page"
                     href="./pages/bids/bids.html"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
                   >
                     Bids
                   </a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="./pages/bids/bidding.html"
-                        >Bidding</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="./pages/bids/bidding-process.html"
-                        >Bidding Process</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="./pages/bids/help.html"
-                        >Help</a
-                      >
-                    </li>
-                  </ul>
                 </li>
                 <li class="nav-item">
                   <a
@@ -593,7 +564,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center">
             <img
-              src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+              src="./img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
               alt="logo"
               height="65"
               
@@ -628,6 +599,7 @@
         </div>     
       </div>
     </footer>
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
