--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -42,7 +42,7 @@
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="/index.html">
               <img
-                src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+                src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
                 alt="Logo"
                 height="65"
               />
@@ -71,16 +71,9 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Carrers & Subs
+                    Subscontractors
                   </a>
                   <ul class="dropdown-menu">
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="/pages/carrers/carrers.html"
-                        >Carrers</a
-                      >
-                    </li>
                     <li>
                       <a
                         class="dropdown-item"
@@ -111,35 +104,14 @@
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                   <a
-                    class="nav-link dropdown-toggle"
-                    href="/pages/bids/bids.html"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
+                    class="nav-link"
+                    aria-current="page"
+                    href="./pages/bids/bids.html"
                   >
                     Bids
                   </a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="/pages/bids/bidding.html"
-                        >Bidding</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="/pages/bids/bidding-process.html"
-                        >Bidding Process</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="/pages/bids/help.html"
-                        >Help</a
-                      >
-                    </li>
-                  </ul>
                 </li>
                 <li class="nav-item">
                   <a
@@ -385,7 +357,7 @@
             class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center"
           >
             <img
-              src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+              src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
               alt="logo"
               height="65"
             />
@@ -462,6 +434,7 @@
         </div>
       </div>
     </footer>
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
