--- a/pages/projects.html
+++ b/pages/projects.html
@@ -43,7 +43,7 @@
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="/index.html">
               <img
-                src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+                src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
                 alt="Logo"
                 height="65"
               />
@@ -160,7 +160,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Subcontractor
+                  Subscontractors
                 </button>
                 <ul class="dropdown-menu w-100 text-center">
                   <li>
@@ -430,14 +430,14 @@
             class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center"
           >
             <img
-              src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+              src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
               alt="logo"
               height="65"
             />
           </div>
           <div class="col-lg-4 col-sm-12 text-white my-3 text-center">
             <p class="fw-semibold">
-              Blackstone NC Construction INC. ® | 058 W Market Street. Colfax,
+              Blackstone NC Construction INC. ® | 9058 W Market Street. Colfax,
               NC 27235 | Office (336) 497-5756
             </p>
             <p class="linksFooter">
@@ -516,6 +516,7 @@
         </div>
       </div>
     </footer>
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
