--- a/pages/projects/raleigh.html
+++ b/pages/projects/raleigh.html
@@ -43,7 +43,7 @@
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="/index.html">
               <img
-                src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+                src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
                 alt="Logo"
                 height="65"
               />
@@ -72,7 +72,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Subcontractors
+                    Subscontractors
                   </a>
                   <ul class="dropdown-menu">
                     <li>
@@ -276,7 +276,7 @@
             class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center"
           >
             <img
-              src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
+              src="/img/BS-Logotipo-Sin-Fondo-Horizontal-VarianteBS.png"
               alt="logo"
               height="65"
             />
@@ -362,6 +362,7 @@
         </div>
       </div>
     </footer>
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
